--- a/src/components/Styles/Item.css
+++ b/src/components/Styles/Item.css
@@ -8,11 +8,17 @@
       align-items: center;
       /* padding: 20px 0px 20px 0px; */
       transition: 0.3s;
+      padding-bottom: 0%;
   }
 
-  .card:hover{
+  .card:focus{
     /* border: solid 3px rgb(120, 120, 120); */
     box-shadow: 0px 0px 25px rgb(176, 176, 176);
+  }
+
+  .ancho-total{
+    width: 100%;
+    margin: 0;
   }
 
   
