--- a/src/components/Styles/ItemCount.css
+++ b/src/components/Styles/ItemCount.css
@@ -1,17 +1,50 @@
+.general-cont{
+    display: flex;
+    flex-direction: column;
+    justify-self: end;
+}
 .counter-cont{
     display: grid;
     grid-template-columns: repeat(8, 1fr);
+    align-items:flex-start;
+    border-style: solid;
+    border-color: rgba(80, 80, 216, 0.488);
+    height: 2em;
 } 
+
+.min-plusbtn{
+    border-style: none;
+    background-color: white;
+    height: 1em;
+}
 .minus-btn{
     grid-column: 1/3;
 }
 .plus-btn{
     grid-column: 7/9;
 }
-.display{
+.display-count{
     grid-column: 3/7;
+    justify-self: center;
 }
 
 .sbmt-btn{
+    grid-column: 1/9;
+    border-style: solid;
+    border-color: rgba(80, 80, 216, 0.77);
+    color:rgb(80, 80, 216);
+    background-color: white;
+    margin-top: 2px;
+    transition: 300ms;
+}
+.sbmt-btn:hover{
+    color: white;
+    background-color:rgba(80, 80, 216, 0.77); 
+}
+.sbmt-btn:active{
+    color: white;
+    background-color:rgb(80, 80, 216); 
+}
+.total-amount{
     grid-column: 1/9;
 }
