--- a/src/components/Styles/Serch.css
+++ b/src/components/Styles/Serch.css
@@ -8,7 +8,13 @@
   }
 .input-sz{
     grid-column: 1 / 6;
+    transition: 0.3s;
+
 }
+.input-sz:focus{
+    box-shadow: 0px 0px 25px rgb(176, 176, 176);
+}
+
 .btn-sz{
     grid-column: 6 / 7;
 }
