--- a/src/components/Styles/Item.css
+++ b/src/components/Styles/Item.css
@@ -11,7 +11,7 @@
       padding-bottom: 0%;
   }
 
-  .card:focus{
+  .card:hover{
     /* border: solid 3px rgb(120, 120, 120); */
     box-shadow: 0px 0px 25px rgb(176, 176, 176);
   }
