--- a/src/components/Styles/ItemCount.css
+++ b/src/components/Styles/ItemCount.css
@@ -9,6 +9,7 @@
     align-items:flex-start;
     border-style: solid;
     border-color: rgba(80, 80, 216, 0.488);
+    border-radius: 5px;
     height: 2em;
 } 
 
@@ -19,9 +20,11 @@
 }
 .minus-btn{
     grid-column: 1/3;
+    border-radius: 5px;
 }
 .plus-btn{
     grid-column: 7/9;
+    border-radius: 5px;
 }
 .display-count{
     grid-column: 3/7;
@@ -32,6 +35,7 @@
     grid-column: 1/9;
     border-style: solid;
     border-color: rgba(80, 80, 216, 0.77);
+    border-radius: 5px;
     color:rgb(80, 80, 216);
     background-color: white;
     margin-top: 2px;
