--- a/src/components/Styles/NavBar.css
+++ b/src/components/Styles/NavBar.css
@@ -1,12 +1,19 @@
 header{
   background-color: white;
 }
+
 .container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
   }
-
+.menu-cont{
+  display: flex;
+  flex-direction: row;
+  padding-left: 20%;
+    padding-right: 20%;
+    background-color: rgb(241, 241, 241);
+}
 
 .one {
   grid-column: 1 / 2;
