--- a/src/components/Styles/ItemDetail.css
+++ b/src/components/Styles/ItemDetail.css
@@ -25,3 +25,27 @@
 .item-detail-price{
     font-size: xx-large;
 }
+
+@media (max-width: 768px){
+    .item-detail-cont{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: 2rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
+        width: min (60rem, 100%);
+        
+    }
+    
+    .item-detail{
+        flex-direction: column;
+    }
+    
+    .with-50-pc{
+        width: 90%;
+    }
+    
+    
+}
