--- a/src/components/Styles/CartWidgetItem.css
+++ b/src/components/Styles/CartWidgetItem.css
@@ -26,7 +26,7 @@
     justify-self: end;
 }
 
-.clear-btn{
+.cart-widg-clear-btn{
     grid-column: 1/2;
     width: 36px;
     height: 36px;
@@ -34,17 +34,6 @@
     top: 429px;
     border: 0;
     background-color: rgba(240, 248, 255, 0.386);
-    border-radius: 50%;
-}
-
-.clear-btn :hover{
-    grid-column: 1/2;
-    width: 36px;
-    height: 36px;
-    left: 689px;
-    top: 429px;
-    border: 0;
-    background-color: rgba(0, 105, 196, 0.386);
     border-radius: 50%;
 }
 
