--- a/src/components/Styles/CheckOutModal.css
+++ b/src/components/Styles/CheckOutModal.css
@@ -77,13 +77,28 @@
     grid-column: 1/3 ;
     margin:1rem 
  }
+ 
+ .input8{
+    grid-column: 1/3 ;
+    margin:1rem 
+ }
+
+ .email-match-error{
+    grid-column: 1/3 ;
+    justify-self: start;
+    margin-left: 1rem;
+    color: red
+ }
+
+ .hide-match-error{
+    display: none
+ }
 
  .purchase-detail-cont{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
-    
 }
 
 .purchase-detail-item-cont{
@@ -97,21 +112,27 @@
 }
 
 .x-close-cont{
-    display: flex;
-    justify-content: end;
+    height: 20px;
+    width: 20px;
+    margin-inline-start: auto;
+    padding: 0%;
 }
 
 .x-close{
     font-size: larger;
-    border: solid 2px;
+    border: none;
     border-radius: 20%;
+    background-color: rgba(146, 152, 157, 0.386);
+    transition: 0.3s ease-in-out;
 }
 
-.x-close :hover{
-    background-color: aqua;
+.x-close:hover{
+    color: white;
     cursor: pointer;
+    background-color: rgb(47, 87, 207);
 }
 
+/*PARA SACARLE LAS FLECHAS A LOS INPUTS TIPO NUMBER*/
 
 /* //Chrome: */
 input[type="number"]::-webkit-outer-spin-button,
@@ -133,3 +154,27 @@ input[type=number]::-webkit-outer-spin-button {
 -webkit-appearance: none;
 margin: 0;
 }
+
+.form{
+    display: flex;
+    padding: 1rem;
+    
+}
+@media (max-width: 992px) {
+    .form{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0rem;
+        max-height: calc(80vh);
+        overflow-y: auto;
+        margin-bottom: 0%; 
+    }
+    .inputs-cont{
+        width: 80%;
+    }
+    .checkout-detail-cont{
+        display: grid;
+        width: 80%;
+  }
+}   
