--- a/src/components/Styles/ListItemContainer.css
+++ b/src/components/Styles/ListItemContainer.css
@@ -6,6 +6,7 @@
     margin-left: 15rem;
     margin-right: 15rem;
     margin-bottom: 5rem;
+    color: rgb(93, 93, 93)
     
     
 }
@@ -15,5 +16,51 @@
     justify-self: start;
     margin-bottom: 0;
     padding-bottom: 0;
+}
+
+@media (max-width: 1200px) {
+    .section {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .title{
+        grid-column: 1/3;
+    }
+  }
+
+@media (max-width: 992px) {
+  .section {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+  }
+  .title{
+      grid-column: 1/2;
+  }
+}
+
+@media (max-width: 768px) {
+    .section {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        margin-left: 5rem;
+        margin-right: 5rem;
+    }
+    .title{
+        grid-column: 1/2;
+        justify-self: start;
+    }
+  }
+
+@media (max-width: 576px) {
+  .section {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      margin-left: 1rem;
+      margin-right: 1rem;
+  }
+  .title{
+      grid-column: 1/2;
+      justify-self: start;
+  }
 }
 
