--- a/src/components/Styles/Menu.css
+++ b/src/components/Styles/Menu.css
@@ -1,29 +1,3 @@
-.nav-link {
-    display: block;
-    padding: 0.5rem 1rem;
-    font-size: medium;
-    color: rgb(93, 93, 93);
-    text-decoration: none;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
-}
-.nav-link :hover{
-    color: #000000;
-    font-weight: bold;
-}
+/*  */
 
-.menu-link-smaller{
-    font-size: smaller;
-}
-.nav-cont *{
-    text-decoration: none;
-    color: rgb(116, 116, 116)
-  }
-
-/* .btn-outline-primary {
-    color: #3909d7;
-    border-color: #3909d7;
-}
-*, ::after, ::before {
-    box-sizing: border-box;
-} */
 
