--- a/src/components/Styles/CartItem.css
+++ b/src/components/Styles/CartItem.css
@@ -36,7 +36,11 @@
     border-radius: 50%;
     align-items: center;
     background-color: rgba(240, 248, 255, 0.386);
-    transition: 1s ease-in-out;
+    transition: 300ms;
+}
+
+.cart-clear-btn:hover{
+    background-color: rgba(255, 0, 0, 0.795);
 }
 
 /* .cart-clear-btn :hover{
