--- a/src/components/Styles/CartWidgetItem.css
+++ b/src/components/Styles/CartWidgetItem.css
@@ -35,6 +35,11 @@
     border: 0;
     background-color: rgba(240, 248, 255, 0.386);
     border-radius: 50%;
+    transition: 300ms;
+}
+
+.cart-widg-clear-btn:hover{
+    background-color: rgba(255, 0, 0, 0.795);
 }
 
 .underline-1rem{
